--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "mo-js": "^0.288.2",
     "react": "^16.12.0",
+    "react-actioncable-provider": "^2.0.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
