--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.12.0",
     "react-actioncable-provider": "^2.0.0",
     "react-dom": "^16.12.0",
+    "react-p5": "^1.3.0",
+    "react-p5-wrapper": "^2.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2"
