--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.7.0",
     "mo-js": "^0.288.2",
     "react": "^16.12.0",
     "react-actioncable-provider": "^2.0.0",
@@ -16,6 +17,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-with-firebase-auth": "^1.3.0",
     "redux": "^4.0.5",
     "semantic-ui-react": "^0.88.2"
   },
