--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.7.0",
+    "material-table": "^1.55.0",
     "mo-js": "^0.288.2",
     "react": "^16.12.0",
     "react-actioncable-provider": "^2.0.0",
