--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "actioncable": "^5.2.4-1",
     "firebase": "^7.7.0",
-    "gh-pages": "^2.2.0",
     "mo-js": "^0.288.2",
+    "p5": "^0.10.2",
     "react": "^16.12.0",
-    "react-actioncable-provider": "^2.0.0",
     "react-dom": "^16.12.0",
-    "react-p5": "^1.3.0",
-    "react-p5-wrapper": "^2.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
@@ -45,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
