Begining services refactor for testing

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "react-testing-library": "^8.0.1"
   }
 }
