--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.1.2",
     "actioncable": "^5.2.4-1",
     "firebase": "^7.7.0",
-    "mo-js": "^0.288.2",
     "p5": "^0.10.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -18,8 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-with-firebase-auth": "^1.3.0",
-    "redux": "^4.0.5",
-    "semantic-ui-react": "^0.88.2"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
