--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^4.4.1",
     "react-with-firebase-auth": "^1.3.0",
     "redux": "^4.0.5"
   },
